--- a/index.html
+++ b/index.html
@@ -5,19 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primera entrega del Proyecto Final</title>
+    <title>DOM</title>
     <script src="js\main.js"></script>
     <link rel="stylesheet" href="styles\styles.css">
 </head>
 
 <body>
 
-    <!--Primera entrega del Proyecto Final-->
+<!-- SE INCORPORA EVENTO AL DAR CLICK 
+FALTA ASOCIARLO A ENTER, SE APLICA EN NUEVO ENVIO-->
+    <h2>Acepto los terminos y condiciones.</h2>
 
-    <h3>Thanks for your purchase</h3>
+    <button id="btnpadel">Enviar</button>
 
-    <p>See more products at: padelrock.com.ar</p>
+    <script>
 
+        let button =
+
+            document.getElementById("btnpadel")
+        button.addEventListener("click", respuestaClick)
+        function respuestaClick() {
+            console.log("Aceptacíon terminos y condiciones");
+            alert('Aceptaste los terminos y condiciones.')
+        }
+
+    </script>
+
+
+
+<div class="contenedor">
+
+    <p>Paleta Head Pro </p>
+    <p>Paleta Adidas</p>
+
+</div>
+
+
+<ul>
+    <li class="palas">Paleta Head Pro</li>
+    <li class="palas">Paleta Adidas</li>
+   <li class="palas">Paleta Head Pro</li>
+</ul>
 
 
 
