--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 
 
+<!-- 
 
-
-    <!--     <h3>Acepto los terminos y condiciones.</h3>
+     <h3>Acepto los terminos y condiciones.</h3>
 
     <button id="btnpadel">Enviar</button>
 
@@ -32,8 +32,12 @@
         <li class="palas">Paleta Head Pro</li>
         <li class="palas">Paleta Adidas</li>
         <li class="palas">Paleta Head Pro</li>
-    </ul> -->
+    </ul> 
+ -->
 
+
+
+ 
 
     <!-- SE INCORPORA EVENTOs AL DAR CLICK Y ENVIO-->
 
